--- a/src/He.PipelineAssessment.UI/Features/Workflow/Views/SaveAndContinue.cshtml
+++ b/src/He.PipelineAssessment.UI/Features/Workflow/Views/SaveAndContinue.cshtml
@@ -47,7 +47,7 @@
     @await Html.PartialAsync("_QuestionScreen",Model)
     }*@
 
-@*        <div class="govuk-grid-row">
+        <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds-from-desktop">
                 <dl class="govuk-summary-list govuk-!-margin-bottom-9">
                     @foreach (var question in Model.Data.Questions!)
@@ -86,9 +86,9 @@
                 </dl>
             </div>
         </div>
-        <input id="Next" type="submit" value="Save and continue" name="Next" class="govuk-button" />*@
+        <input id="Next" type="submit" value="Save and continue" name="Next" class="govuk-button" />
 
-  @*      <table class="govuk-table">
+@*        <table class="govuk-table">
             <thead class="govuk-table__head">
             <tr class="govuk-table__row">
                 @foreach (var question in Model.Data.Questions)
