updated name in style sheet to prevent esla modal closing

--- a/src/Elsa.Dashboard/wwwroot/css/site.css
+++ b/src/Elsa.Dashboard/wwwroot/css/site.css
@@ -35,7 +35,7 @@
   overflow: hidden;
 }
 
-.elsa-modal-dialog > div > div > div:first-child {
+elsa-modal-dialog > div > div > div:first-child {
   pointer-events: none;
 }
 
